istio-manifests/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bluegreen
  namespace: bluegreen
spec:
  host: bluegreen #service name
  subsets:
  - name: green
    labels:
      version: green
  - name: blue
    labels:
      version: blue
