istio-manifests/VirtualService-LoadBalancing-70-30.yaml
# Documentation https://istio.io/latest/docs/reference/config/networking/destination-rule/#DestinationRule
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bluegreen-vs
  namespace: bluegreen
spec:
  hosts:
  - "*"
  gateways:
  - bluegreen-gateway
  http:
  - match:
    - uri:
        exact: /image.php
    - uri:
        prefix: /color.php
    - uri:
        prefix: /
    route:
    - destination:
        host: bluegreen # Service name
        subset: blue #subset declared in DestinationRule
        port:
          number: 8080
      weight: 70
    - destination:
        host: bluegreen # Service name
        subset: green #subset declared in DestinationRule
        port:
          number: 8080
      weight: 30
